# MotooriKosuzu

./: .clang-format  .clangd  .gitignore  API.py  CMakeLists.txt  Dockerfile  Project.sln  Project.vcxproj  README.md  deepl_translate.py  testEnvironments.json
bootstrap/: bootstrap.cpp  bootstrap.out  bootstrap.vcxproj  update.sh
config/: ConfigBook.json
draft/: draft-ja.md  draft.md  draft.org
src/: Application.cpp  BambooSlips.cpp  BambooSlips.h  Bookshelf.hpp  Desk.hpp  Dictation.cpp  Dictation.h  MotooriKosuz.h  MotooriKosuze.cpp  MotooriKosuze.h  MotooriKosuzu.cpp  MotooriKosuzu.h  Qpp.hpp  Ru_koto.cpp  Ru_koto.h  Stickers.cpp  Stickers.h  Stone.cpp  Stone.h  Voice.cpp  Voice.h  WritingBrush.cpp  WritingBrush.h  common.h  dpp.hpp  main.cpp  start.hpp  translate.h
src/benchmark/: benchmark.cpp
src/core/: core.cpp  core.hpp  reflection.hpp  web.cpp  web.h
src/test/: test.cpp
src/utils/: tui.cpp
